[gd_scene load_steps=2 format=3 uid="uid://topbar_component"]

[ext_resource type="Script" path="res://scripts/ui/components/TopBar.gd" id="1"]

[node name="TopBar" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 44.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="HBox"]
layout_mode = 2
text = "‚Üê Back"

[node name="Sep1" type="VSeparator" parent="HBox"]
layout_mode = 2

[node name="NicknameLabel" type="Label" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player"

[node name="CurrencyLabel" type="Label" parent="HBox"]
layout_mode = 2
text = "üí∞ 0"

[node name="Sep2" type="VSeparator" parent="HBox"]
layout_mode = 2

[node name="NavButtons" type="HBoxContainer" parent="HBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="MainMenuBtn" type="Button" parent="HBox/NavButtons"]
layout_mode = 2
text = "Menu"

[node name="AuctionBtn" type="Button" parent="HBox/NavButtons"]
layout_mode = 2
text = "Auction"

[node name="InventoryBtn" type="Button" parent="HBox/NavButtons"]
layout_mode = 2
text = "Inventory"

[node name="BattleBtn" type="Button" parent="HBox/NavButtons"]
layout_mode = 2
text = "Battle"

[node name="SettingsBtn" type="Button" parent="HBox/NavButtons"]
layout_mode = 2
text = "Settings"
